fix layout bugs

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -111,11 +111,7 @@ a {
 a.project-preview {
   text-decoration: none; }
 
-html {
-  width: 100%;
-  overflow-x: hidden; }
-
-body {
+.phalen-io {
   width: 100%;
   overflow-x: hidden; }
 
