--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,9 +1,4 @@
-html {
-  width: 100%;
-  overflow-x: hidden;
-}
-
-body {
+.phalen-io {
   width: 100%;
   overflow-x: hidden;
 }
